# Marshmallow-compiler

./: .gitignore  CMakeLists.txt  Lexer.h  README.md
data/: IfProgram.mlw  calculator.mlw  evenNumbers.mlw  fibonacci.mlw  ifElse.mlw  leapYearCheck.mlw  scopetest.mlw  simpleProgram.mlw
doc/: contribution.txt  sampleParseTree.txt
src/: Lexer.cpp  Lexer.h  byte_code.cpp  byte_code.h  bytecode.cpp  bytecode.h  bytecode_test.cpp  bytecode_test.h  mello.cpp  mello.h  melloc.cpp  pizzac.c  runtime.cpp  runtime.h  runtime_test.cpp
src/compiler/: ASTParser.cpp  ASTParser.h  Parser.cpp  Parser.h  bytecode.cpp  bytecode.h  lexer.cpp  lexer.h  parser.cpp  parser.h  parser_test.cpp
src/compiler/utils/: BlockNode.cpp  BlockNode.h  Node.cpp  SymbolTable.cpp  SymbolTable.h  TreeHelper.cpp  TreeHelper.h
src/compiler/utils/other_nodes/: ArgumentsNode.cpp  ArgumentsNode.h  BinaryNode.cpp  BinaryNode.h  Block.cpp  Block.h  ExpNode.cpp  ExpNode.h  IdenNode.cpp  IdenNode.h  Node.cpp  Node.h  NumberNode.cpp  NumberNode.h  ParametersNode.cpp  ParametersNode.h  ProgramNode.cpp  ProgramNode.h  UnaryNode.cpp  UnaryNode.h
src/compiler/utils/stmt/: AssignNode.cpp  AssignNode.h  BranchNode.cpp  BranchNode.h  BreakNode.cpp  BreakNode.h  ContinueNode.cpp  ContinueNode.h  ExecFuncNode.cpp  ExecFuncNode.h  FuncNode.cpp  FuncNode.h  PrintNode.cpp  PrintNode.h  ReturnNode.cpp  ReturnNode.h  StatementNode.cpp  StatementNode.h  WhileNode.cpp  WhileNode.h
src/runtime/: runtime.cpp  runtime.h
src/tests/: bytecode_test.cpp  lexer_test.cpp  parser_test.cpp  runtime_test.cpp
src/utils/: node.cpp  node.h  opcodes.h  symbolTable.h  treeHelper.cpp  treeHelper.h
